--- a/css/main.scss
+++ b/css/main.scss
@@ -20,4 +20,27 @@ html{
     font-family: 'inconsolata', serif;
 }
 
+header{
+    width:100%;
+    height:150px;
+    padding:35px;
+    display:flex;
+    justify-content: flex-end;
+
+    background-color: $secondary-color;
+        button{
+            width:121px;
+            height:41px;
+            padding:6px;
+            background-color: $primary-color;
+            font-size:1.6rem;
+            font-weight: 600;
+            color:$letter-color;
+            border:none;
+            border-radius: 16px;
+            box-shadow: 4px 4px 8px rgba(0,0,0,0.50);
+
+        }
+}
+
 
