--- a/css/main.scss
+++ b/css/main.scss
@@ -49,4 +49,14 @@ header{
         }
 }
 
+.main-container{
+    width:100%;
+    height:100vh;
+    display:flex;
+    justify-content: center;
+    
+    padding-top: 25px;
+    background-color: $primary-color;
 
+
+}
