--- a/css/main.css
+++ b/css/main.css
@@ -45,5 +45,20 @@ header button:hover {
   display: flex;
   justify-content: center;
   padding-top: 25px;
+  padding-left: 15px;
+  padding-right: 15px;
   background-color: #E8562A;
+}
+.main-container .main-note--container {
+  width: 340px;
+  height: 320px;
+  min-width: 320px;
+}
+.main-container .main-note--container .note-container--tools {
+  width: 100%;
+  height: 75px;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  background-color: #EC8E71;
 }
