--- a/css/main.css
+++ b/css/main.css
@@ -56,9 +56,16 @@ header button:hover {
 }
 .main-container .main-note--container .note-container--tools {
   width: 100%;
-  height: 75px;
+  height: 50px;
+  padding: 8px;
   display: flex;
   flex-direction: row;
   gap: 10px;
   background-color: #EC8E71;
+}
+.main-container .main-note--container .note-container--tools .tools--edit, .main-container .main-note--container .note-container--tools .tools--delete {
+  width: 35px;
+  height: 35px;
+  border: none;
+  background-color: none;
 }
