--- a/css/main.scss
+++ b/css/main.scss
@@ -67,11 +67,27 @@ header{
 
             .note-container--tools{
                 width:100%;
-                height:75px;
+                height:50px;
+                padding:8px;
                 display:flex;
                 flex-direction: row;
                 gap:10px;
                 background-color: $secondary-color;
+            
+                    //buttons style:
+                        .tools--edit{
+                            width:35px;
+                            height:35px;
+                            border:none;
+                            background-color:none;
+
+                        }
+                        .tools--delete{
+                            @extend .tools--edit;
+                        }
+                    
+                        
+                        
             }
     }
 }
