--- a/css/main.css
+++ b/css/main.css
@@ -41,8 +41,9 @@ header button:hover {
 
 .main-container {
   width: 100%;
-  height: 100vh;
+  height: auto;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   padding-top: 25px;
   padding-left: 15px;
