--- a/css/main.scss
+++ b/css/main.scss
@@ -51,8 +51,9 @@ header{
 
 .main-container{
     width:100%;
-    height:100vh;
+    height:auto;
     display:flex;
+    flex-direction:column;
     justify-content: center;
     
     padding-top: 25px;
