--- a/css/main.scss
+++ b/css/main.scss
@@ -105,5 +105,13 @@ header{
                         
                         
             }
+
+            .note-container--textArea{
+                width:100%;
+                height:100%;
+                padding:20px;
+                font-size:1.8rem;
+                font-weight: bold;
+            }
     }
 }
