--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,10 @@ html {
   font-family: "inconsolata", serif;
 }
 
+body {
+  background-color: #E8562A;
+}
+
 header {
   width: 100%;
   height: 150px;
