--- a/css/main.scss
+++ b/css/main.scss
@@ -19,7 +19,9 @@ html{
     font-size:62.5%;
     font-family: 'inconsolata', serif;
 }
-
+body{
+    background-color: $primary-color;
+}
 header{
     width:100%;
     height:150px;
@@ -65,7 +67,7 @@ header{
         width:340px;
         height:320px;
         min-width: 320px;
-
+        
             .note-container--tools{
                 width:100%;
                 height:50px;
