--- a/css/main.scss
+++ b/css/main.scss
@@ -67,7 +67,8 @@ header{
         width:340px;
         height:320px;
         min-width: 320px;
-        
+        margin-bottom: 75px;
+            
             .note-container--tools{
                 width:100%;
                 height:50px;
@@ -114,6 +115,7 @@ header{
                 padding:20px;
                 font-size:1.8rem;
                 font-weight: bold;
+                margin-bottom:35px;
             }
     }
 }
