--- a/css/main.css
+++ b/css/main.css
@@ -56,9 +56,10 @@ header button:hover {
 }
 .main-container .main-note--container {
   width: 340px;
-  height: 320px;
+  height: auto;
   min-width: 320px;
   margin-bottom: 75px;
+  box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.5);
 }
 .main-container .main-note--container .note-container--tools {
   width: 100%;
@@ -91,9 +92,8 @@ header button:hover {
 }
 .main-container .main-note--container .note-container--textArea {
   width: 100%;
-  height: 100%;
+  height: 320px;
   padding: 20px;
   font-size: 1.8rem;
   font-weight: bold;
-  margin-bottom: 35px;
 }
