--- a/css/main.scss
+++ b/css/main.scss
@@ -116,7 +116,7 @@ header{
                 padding:20px;
                 font-size:1.8rem;
                 font-weight: bold;
-                
+                resize: none;                
             }
     }
 }
